--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ body {
 /*  -- Header Styling -- */
 
 .header {
+    padding-top: 10px;
     z-index: 1;
     /* border: solid red 1px; */
     border-bottom: 1px solid seashell;
@@ -21,7 +22,7 @@ body {
     top: 0;
     box-sizing: border-box;
     width: 100%;
-    height: 60px;
+    height: 69px;
     overflow: hidden;
 }
 
@@ -63,16 +64,16 @@ body {
 }
 
 .products {
-    margin: 10px 0;
+    margin: 35px 0;
     width: 100%;
-    border: solid red 2px;
+    /* border: solid red 1px; */
 }
 
 .products .text {
     width: 1000px;
     margin: 0 auto;
     text-align: center;
-    border: solid red 2px;
+    /* border: solid red 2px; */
 }
 
 .products .pictures {
@@ -87,4 +88,55 @@ body {
     height: 200px;
     width: 300px;
     margin-bottom: 10px;
+    margin-right: 25px;
+}
+
+.unit h3 {
+    text-align: center;
+}
+
+.locations {
+    position: relative;
+    border: 1px solid red;
+    margin: 0 auto;
+    box-sizing: content-box;
+    width: 1200px;
+    height: 600px;
+    background-image: url('assets/img-locations-background.jpg');
+}
+
+.locations .title {
+    font-size: 35px;
+    position: absolute;
+    top: 12%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    /* margin-top: 20%; */
+    
+}
+
+.cards {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: auto 0;
+    border: solid red 1px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cards div {
+    opacity: 1;
+    font-size: 18px;
+    background-color: black;
+    margin-right: 40px;
+    height: 300px;
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
 }
