--- a/styles.css
+++ b/styles.css
@@ -97,7 +97,7 @@ body {
 
 .locations {
     position: relative;
-    border: 1px solid red;
+    /* border: 1px solid red; */
     margin: 0 auto;
     box-sizing: content-box;
     width: 1200px;
@@ -122,7 +122,7 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     margin: auto 0;
-    border: solid red 1px;
+    /* border: solid red 1px; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -139,4 +139,19 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+}
+
+/* -- Footer Styling -- */
+.footer {
+    text-align: center;
+    /* border: solid 1px red; */
+    box-sizing: border-box;
+    height: 200px;
+
+}
+
+.footer .copyright {
+    /* border: solid red 1px; */
+    margin-top: 20px;
+    text-align: left;
 }
